--- a/Src/ChatScreen.fx.yaml
+++ b/Src/ChatScreen.fx.yaml
@@ -97,8 +97,8 @@ ChatScreen As screen:
                 Blank()
             );
             Navigate(LoginScreen, ScreenTransition.None);
-        X: =25
-        Y: =1066
+        X: =10
+        Y: =1072
         ZIndex: =6
 
     "ChatScreenMessageGallery As gallery.'BrowseLayout_Vertical_TwoTextOneImageVariant_ver5.0'":
@@ -252,6 +252,8 @@ ChatScreen As screen:
                     {CHAT: 1}
                 );
                 Notify("称号-将来のビルゲイツ",NotificationType.Success),
+                ChatScreenMessageTextField.Text = "",
+                Notify("空白のメッセージは送信できません", NotificationType.Error),
                 Patch(
                     B_CHAT,
                     Defaults(B_CHAT),
@@ -273,17 +275,17 @@ ChatScreen As screen:
         Height: =62
         Icon: =Icon.Currency
         OnSelect: |+
-            =If(
+            =Set(_rate, "今のレート:" & Rating& Char(10) & " 今日のポイント:" & Today_Rate);
+            If(
                 !IsBlank(LookUp(B_TROPHY, CHATRATE <> 1 && USERID = Text(user_id))),
-                Notify("称号-事務報告", NotificationType.Success),
-                Set(_rate, "今のレート:" & Rating& Text(10) & " 今日のポイント:" & Today_Rate)
+                Notify("称号-事務報告", NotificationType.Success)
             );
             
             Patch(
                 B_CHAT,
                 Defaults(B_CHAT),
                 {
-                    SENDUSERID: Int(user_id),
+                    SENDUSERID: user_id,
                     RECEIVEUSERID: send_id,
                     TEXT: _rate
                 }
