--- a/Src/HomeScreen.fx.yaml
+++ b/Src/HomeScreen.fx.yaml
@@ -20,6 +20,7 @@ HomeScreen As screen:
         );
 
     "HomeScreenGallery As gallery.'BrowseLayout_Vertical_ThreeTextVariant_ver5.0'":
+        BorderColor: =RGBA(192,79,21,50)
         DelayItemLoading: =true
         Height: =608
         Items: |-
@@ -28,7 +29,7 @@ HomeScreen As screen:
                     B_TASK,
                     USERID = user_id,
                     FLAG = 0,
-                    DATE = Today()
+                    DateDiff(DATE, Today(), TimeUnit.Days) <= 0
                 ),
                 DATE
             )
@@ -53,6 +54,7 @@ HomeScreen As screen:
             PaddingLeft: =0
             PaddingRight: =0
             PaddingTop: =0
+            Size: =18
             Text: =ThisItem.TASKNAME
             VerticalAlign: =VerticalAlign.Top
             Width: =Parent.TemplateWidth - 86
@@ -114,6 +116,7 @@ HomeScreen As screen:
             ZIndex: =5
 
         Rectangle4 As rectangle:
+            Fill: =RGBA(192,79,21,50)
             Height: =Parent.TemplateHeight - Separator3.Height
             OnSelect: =Select(Parent)
             Visible: =ThisItem.IsSelected
@@ -187,7 +190,7 @@ HomeScreen As screen:
             Navigate(LoginScreen, ScreenTransition.None);
             Reset(LoginScreenPasswordTextField)
         X: =15
-        Y: =1066
+        Y: =1072
         ZIndex: =6
 
     HomeScreenRefreshIcon As icon.Reset:
@@ -237,7 +240,7 @@ HomeScreen As screen:
         Size: =25
         Text: ="今日の未完了タスク"
         Width: =327
-        X: =116
+        X: =156
         Y: =372
         ZIndex: =9
 
