--- a/Src/RatingScreen.fx.yaml
+++ b/Src/RatingScreen.fx.yaml
@@ -170,19 +170,19 @@ RatingScreen As screen:
         ZIndex: =7
 
     RatingScreenRankLabel As label:
-        Height: =70
+        Height: =58
         Size: =21
-        Text: ="位 　　　称号を見る"
-        Width: =277
-        X: =158
-        Y: =944
+        Text: ="称号を見る→"
+        Width: =199
+        X: =183
+        Y: =956
         ZIndex: =8
 
     RatingScreenYourTitleLabel As label:
         Height: =70
-        Size: =21
-        Text: ="あなたの今の順位と称号"
-        Width: =324
+        Size: =23
+        Text: ="あなたの称号"
+        Width: =219
         X: =158
         Y: =874
         ZIndex: =9
@@ -225,74 +225,122 @@ RatingScreen As screen:
                         Roop1,
                         {No: 1}
                     );
-                    Clear(Roop1),
+                    Clear(Roop1);
                     Set(
                         Yesterday_Rate,
-                        Round(
-                            Sum(
-                                B_TASK,
-                                If(
-                                    And(
-                                        FLAG = 1,
-                                        USERID = user_id,
-                                        FINISHTIME = DateAdd(
-                                            Today(),
-                                            -Cnt,
-                                            TimeUnit.Days
-                                        )
-                                    ),
-                                    POINT
-                                )
-                            ) / CountRows(
-                                Filter(
-                                    B_TASK,
-                                    And(
-                                        FLAG = 1,
-                                        USERID = user_id,
-                                        FINISHTIME = DateAdd(
-                                            Today(),
-                                            -Cnt,
-                                            TimeUnit.Days
-                                        )
-                                    )
-                                )
-                            ),
-                            2
-                        ) / 2
+                        0
                     );
                     Set(
                         Today_Rate,
-                        Round(
-                            Sum(
+                        0
+                    ),
+                    If(
+                        CountRows(
+                            Filter(
                                 B_TASK,
-                                If(
-                                    And(
-                                        FLAG = 1,
-                                        USERID = user_id,
-                                        FINISHTIME = DateAdd(
-                                            Today(),
-                                            -Cnt + 1,
-                                            TimeUnit.Days
-                                        )
-                                    ),
-                                    POINT
-                                )
-                            ) / CountRows(
-                                Filter(
-                                    B_TASK,
-                                    And(
-                                        FLAG = 1,
-                                        USERID = user_id,
-                                        FINISHTIME = DateAdd(
-                                            Today(),
-                                            -Cnt + 1,
-                                            TimeUnit.Days
-                                        )
+                                And(
+                                    FLAG = 1,
+                                    USERID = user_id,
+                                    FINISHTIME = DateAdd(
+                                        Today(),
+                                        -Cnt,
+                                        TimeUnit.Days
                                     )
                                 )
-                            ),
-                            2
-                        ) / 2
+                            )
+                        ) = 0,
+                        Set(
+                            Yesterday_Rate,
+                            Yesterday_Rate / 2
+                        ),
+                        Set(
+                            Yesterday_Rate,
+                            Round(
+                                Sum(
+                                    B_TASK,
+                                    If(
+                                        And(
+                                            FLAG = 1,
+                                            USERID = user_id,
+                                            FINISHTIME = DateAdd(
+                                                Today(),
+                                                -Cnt,
+                                                TimeUnit.Days
+                                            )
+                                        ),
+                                        POINT
+                                    )
+                                ) / CountRows(
+                                    Filter(
+                                        B_TASK,
+                                        And(
+                                            FLAG = 1,
+                                            USERID = user_id,
+                                            FINISHTIME = DateAdd(
+                                                Today(),
+                                                -Cnt,
+                                                TimeUnit.Days
+                                            )
+                                        )
+                                    )
+                                ),
+                                2
+                            ) / 2
+                        );
+                    );
+                    If(
+                        CountRows(
+                            Filter(
+                                B_TASK,
+                                And(
+                                    FLAG = 1,
+                                    USERID = user_id,
+                                    FINISHTIME = DateAdd(
+                                        Today(),
+                                        -Cnt + 1,
+                                        TimeUnit.Days
+                                    )
+                                )
+                            )
+                        ) = 0,
+                        Set(
+                            Today_Rate,
+                            Today_Rate / 2
+                        ),
+                        Set(
+                            Today_Rate,
+                            Round(
+                                Sum(
+                                    B_TASK,
+                                    If(
+                                        And(
+                                            FLAG = 1,
+                                            USERID = user_id,
+                                            FINISHTIME = DateAdd(
+                                                Today(),
+                                                -Cnt + 1,
+                                                TimeUnit.Days
+                                            )
+                                        ),
+                                        POINT
+                                    )
+                                ) / CountRows(
+                                    Filter(
+                                        B_TASK,
+                                        And(
+                                            FLAG = 1,
+                                            USERID = user_id,
+                                            FINISHTIME = DateAdd(
+                                                Today(),
+                                                -Cnt + 1,
+                                                TimeUnit.Days
+                                            )
+                                        )
+                                    )
+                                ),
+                                2
+                            ) / 2
+                        );
                     );
                     Collect(
                         Roop1,
@@ -340,43 +388,6 @@ RatingScreen As screen:
                         )
                     }
                 );
-                Collect(
-                    B_RATE_RANK,
-                    B_RATE
-                );
-                Set(
-                    B_RATE_RANK,
-                    Sort(
-                        B_RATE_RANK,
-                        RATE,
-                        SortOrder.Descending
-                    );
-                );
-                ForAll(
-                    B_RATE_RANK,
-                    AddColumns(
-                        Sequence(
-                            CountRows(B_RATE_RANK),
-                            1
-                        ),
-                        RANK,
-                        Index(
-                            B_RATE_RANK,
-                            Value
-                        );
-                    );
-                );
-                Set(
-                    Current_Rank,
-                    LookUp(
-                        B_RATE_RANK,
-                        USERID = user_id
-                    )
-                );
-                Set(
-                    Cnt,
-                    Cnt - 1
-                );
                 
             );
         Repeat: =true
@@ -397,7 +408,7 @@ RatingScreen As screen:
     Icon1 As icon.Ribbon:
         Icon: =Icon.Ribbon
         OnSelect: =Navigate(TrophyScreen);
-        X: =457
-        Y: =950
+        X: =382
+        Y: =953
         ZIndex: =15
 
