--- a/Src/TrophyScreen.fx.yaml
+++ b/Src/TrophyScreen.fx.yaml
@@ -7,3 +7,117 @@ TrophyScreen As screen:
         Y: =20
         ZIndex: =1
 
+    Image2 As image:
+        Height: =76
+        Image: =画像
+        Width: =88
+        X: =24
+        Y: =780
+        ZIndex: =2
+
+    Label3 As label:
+        FontWeight: =FontWeight.Lighter
+        Height: =15
+        Text: ="はじめの一歩"
+        Width: =124
+        X: =6
+        Y: =856
+        ZIndex: =3
+
+    Image2_1 As image:
+        Height: =76
+        Image: =If(LookUp(B_TROPHY,USERID=Text(user_id)).'404T'=1,'画像 (5)','画像 (6)')
+        Width: =88
+        X: =24
+        Y: =899
+        ZIndex: =5
+
+    Image2_2 As image:
+        Height: =76
+        Image: ='画像 (6)'
+        Width: =88
+        X: =72
+        Y: =468
+        ZIndex: =6
+
+    Image2_3 As image:
+        Height: =76
+        Image: ='画像 (3)'
+        Width: =88
+        X: =293
+        Y: =654
+        ZIndex: =7
+
+    Image2_4 As image:
+        Height: =76
+        Image: ='画像 (4)'
+        Width: =88
+        X: =307
+        Y: =498
+        ZIndex: =8
+
+    Image2_5 As image:
+        Height: =76
+        Image: ='画像 (2)'
+        Width: =88
+        X: =381
+        Y: =650
+        ZIndex: =9
+
+    Image2_6 As image:
+        Height: =76
+        Image: ='画像 (1)'
+        Width: =88
+        X: =88
+        Y: =587
+        ZIndex: =10
+
+    Label4 As label:
+        Height: =70
+        Size: =21
+        Text: ="テキスト"
+        Width: =560
+        X: =40
+        Y: =40
+        ZIndex: =11
+
+    Image2_7 As image:
+        Height: =76
+        Image: =If(LookUp(B_TROPHY,USERID=Text(user_id)).GOD=1,'画像 (5)','画像 (6)')
+        Width: =88
+        X: =123
+        Y: =899
+        ZIndex: =13
+
+    Image2_8 As image:
+        Height: =76
+        Image: =If(LookUp(B_TROPHY,USERID=Text(user_id)).RANK2=1,'画像 (5)','画像 (6)')
+        Width: =88
+        X: =420
+        Y: =899
+        ZIndex: =15
+
+    Image2_9 As image:
+        Height: =76
+        Image: =If(LookUp(B_TROPHY,USERID=Text(user_id)).CHAT=1,'画像 (5)','画像 (6)')
+        Width: =88
+        X: =222
+        Y: =899
+        ZIndex: =17
+
+    Image2_10 As image:
+        Height: =76
+        Image: =If(LookUp(B_TROPHY,USERID=Text(user_id)).UDAY=1,'画像 (5)','画像 (6)')
+        Width: =88
+        X: =321
+        Y: =899
+        ZIndex: =19
+
+    Image2_11 As image:
+        Height: =76
+        Image: =If(LookUp(B_TROPHY,USERID=Text(user_id)).BIRTHDAY=1,'画像 (5)','画像 (6)')
+        Width: =88
+        X: =523
+        Y: =899
+        ZIndex: =21
+
