--- a/Src/OneTaskShowScreen.fx.yaml
+++ b/Src/OneTaskShowScreen.fx.yaml
@@ -34,7 +34,7 @@ OneTaskShowScreen As screen:
         Size: =21
         Text: =LookUp(B_TASK, B_TASK=task_id).TASKDESCRIPTION
         Width: =560
-        Y: =358
+        Y: =320
         ZIndex: =6
 
     OneTaskShowScreenTaskLimitTextLabel As label:
@@ -43,7 +43,7 @@ OneTaskShowScreen As screen:
         Size: =21
         Text: ="期日"
         Width: =560
-        Y: =372
+        Y: =390
         ZIndex: =7
 
     OneTaskShowScreenDatePicker As datepicker:
@@ -68,83 +68,6 @@ OneTaskShowScreen As screen:
         X: =224
         ZIndex: =17
 
-    OneTaskShowScreenHomeIcon As icon.Home:
-        Icon: =Icon.Home
-        OnSelect: |-
-            =If(
-                is_parent,
-                Navigate(ParentScreen, ScreenTransition.None),
-                Navigate(HomeScreen, ScreenTransition.None)
-            );
-        X: =288
-        Y: =1066
-        ZIndex: =18
-
-    OneTaskShowScreenTaskIcon As icon.Note:
-        Icon: =Icon.Note
-        OnSelect: |-
-            =If(
-                is_parent,
-                Notify("保護者アカウントではこの機能は無効化されています。",NotificationType.Error),
-                Navigate(TaskScreen, ScreenTransition.None)
-            );
-        X: =196
-        Y: =1066
-        ZIndex: =19
-
-    OneTaskShowScreenSettingIcon As icon.Settings:
-        Icon: =Icon.Settings
-        OnSelect: =Navigate(SettingScreen, ScreenTransition.None);
-        X: =471
-        Y: =1072
-        ZIndex: =20
-
-    OneTaskShowScreenProgressIcon As icon.Trending:
-        Icon: =Icon.Trending
-        OnSelect: =Navigate(RatingScreen, ScreenTransition.None);
-        X: =367
-        Y: =1072
-        ZIndex: =21
-
-    OneTaskShowScreenMailIcon As icon.Mail:
-        Icon: =Icon.Mail
-        OnSelect: |
-            =Refresh(B_USER);
-            Set(
-                send_id,
-                LookUp(
-                    B_USER,
-                    USERID=Text(user_id),
-                    PARENTID
-                )
-            );
-            If(
-                IsBlank(send_id),
-                Notify(
-                    "対応する保護者が見つかりません。設定から設定してください。",
-                    NotificationType.Error
-                ),
-                Navigate(
-                    ChatScreen,
-                    ScreenTransition.None
-                )
-            );
-        X: =112
-        Y: =1066
-        ZIndex: =22
-
-    OneTaskShowScreenLogoutIcon As icon.Lock:
-        Icon: =Icon.Lock
-        OnSelect: |-
-            =Set(
-                user_id,
-                Blank()
-            );
-            Navigate(LoginScreen, ScreenTransition.None);
-        X: =10
-        Y: =1072
-        ZIndex: =23
-
     OneTaskShowScreenFinishIcon As icon.Check:
         Icon: =Icon.Check
         OnSelect: |-
@@ -163,21 +86,24 @@ OneTaskShowScreen As screen:
                     FLAG: 1
                 }
             );
+            
+            Patch(
+                    B_TROPHY,
+                    LookUp(
+                        B_TROPHY,
+                        USERID = Text(user_id)
+                    ),
+                    {
+                        TASK: LookUp(
+                            B_TROPHY,
+                            USERID = Text(user_id)
+                        ).TASK + 1
+                    }
+                );
+            
             Back(ScreenTransition.None);
         X: =575
         ZIndex: =24
-
-    OneTaskShowScreenRefreshIcon As icon.Reset:
-        Icon: =Icon.Reset
-        OnSelect: |-
-            =Refresh(B_CHAT);
-            Refresh(B_RATE);
-            Refresh(B_TASK);
-            Refresh(B_TROPHY);
-            Refresh(B_USER);
-        X: =560
-        Y: =1066
-        ZIndex: =25
 
     Label1 As label:
         Height: =70
@@ -194,4 +120,132 @@ OneTaskShowScreen As screen:
         Width: =560
         Y: =675
         ZIndex: =27
+
+    HomeScreenHomeIcon_1 As icon.Home:
+        Icon: =Icon.Home
+        OnSelect: |-
+            =If(
+                is_parent,
+                Navigate(ParentScreen, ScreenTransition.None),
+                Navigate(HomeScreen, ScreenTransition.None)
+            );
+        X: =285
+        Y: =1049
+        ZIndex: =28
+
+    HomeScreenTaskIcon_1 As icon.Note:
+        Icon: =Icon.Note
+        OnSelect: |-
+            =If(
+                is_parent,
+                Notify("保護者アカウントではこの機能は無効化されています。",NotificationType.Error),
+                Navigate(TaskScreen, ScreenTransition.None)
+            );
+            Set(_task,CountRows(Gallery1.AllItems));
+            If(
+                _task = 0,
+                Set(_task, 1)
+            );
+            Set(
+                _Task,
+                CountRows(
+                    Filter(
+                        B_TASK,
+                        USERID = user_id,
+                        DATE = Today()
+                    )
+                )
+            );
+            Set(_tasks,LookUp(B_TROPHY,USERID = Text(user_id)).TASK);
+        X: =195
+        Y: =1049
+        ZIndex: =29
+
+    HomeScreenSettingsIcon_1 As icon.Settings:
+        Icon: =Icon.Settings
+        OnSelect: =Navigate(SettingScreen, ScreenTransition.None);
+        X: =465
+        Y: =1049
+        ZIndex: =30
+
+    HomeScreenMailIcon_1 As icon.Mail:
+        Icon: =Icon.Mail
+        OnSelect: |
+            =Refresh(B_USER);
+            Set(
+                send_id,
+                LookUp(
+                    B_USER,
+                    USERID=Text(user_id)
+                ).PARENTID
+            );
+            If(
+                IsBlank(send_id),
+                Notify(
+                    "対応する保護者が見つかりません。設定から設定してください。",
+                    NotificationType.Error
+                ),
+                Navigate(
+                    ChatScreen,
+                    ScreenTransition.None
+                )
+            );
+        X: =105
+        Y: =1049
+        ZIndex: =31
+
+    HomeScreenLogoutIcon_1 As icon.Lock:
+        Icon: =Icon.Lock
+        OnSelect: |-
+            =Set(
+                user_id,
+                Blank()
+            );
+            Navigate(LoginScreen, ScreenTransition.None);
+            Reset(LoginScreenPasswordTextField)
+        X: =15
+        Y: =1049
+        ZIndex: =32
+
+    HomeScreenRefreshIcon_1 As icon.Reset:
+        Icon: =Icon.Reset
+        OnSelect: |-
+            =Refresh(B_CHAT);
+            Refresh(B_RATE);
+            Refresh(B_TASK);
+            Refresh(B_TROPHY);
+            Refresh(B_USER);
+        X: =555
+        Y: =1049
+        ZIndex: =33
+
+    HomeScreenProgressIcon_1 As icon.Trending:
+        Icon: =Icon.Trending
+        OnSelect: |
+            =Navigate(
+                RatingScreen,
+                ScreenTransition.None
+            );
+            If(
+                LookUp(
+                    B_TROPHY,
+                    USERID = Text(user_id),
+                    IsBlank(RANK)
+                ),
+                Notify(
+                    "称号-登山開始",
+                    NotificationType.Success
+                );
+                Patch(
+                    B_TROPHY,
+                    LookUp(
+                        B_TROPHY,
+                        USERID = Text(user_id)
+                    ),
+                    {RANK: 0}
+                )
+            );
+        X: =375
+        Y: =1049
+        ZIndex: =34
 
