--- a/Src/SignupScreen.fx.yaml
+++ b/Src/SignupScreen.fx.yaml
@@ -62,9 +62,16 @@ SignupScreen As screen:
                         FLAG: parentorchild
                     }
                 );
-                Navigate(
-                    HomeScreen,
-                    ScreenTransition.None
+                If(
+                    is_parent,
+                    Navigate(
+                        ParentScreen,
+                        ScreenTransition.None
+                    ),
+                    Navigate(
+                        HomeScreen,
+                        ScreenTransition.None
+                    )
                 );
                 Set(
                     user_id,
@@ -94,7 +101,8 @@ SignupScreen As screen:
                         LASTDAY: Today(),
                         TASK: 0,
                         POINT: 0,
-                        FTASK:1
+                        FTASK: 1,
+                        DAY: 1
                     }
                 );
                 Patch(
@@ -129,4 +137,23 @@ SignupScreen As screen:
         X: =118
         Y: =580
         ZIndex: =5
+
+    Label4 As label:
+        Height: =70
+        Size: =21
+        Text: ="ログインは"
+        Width: =560
+        Y: =942
+        ZIndex: =6
+
+    Label5 As label:
+        Color: =RGBA(136, 160, 209, 1)
+        Height: =70
+        OnSelect: =Navigate(LoginScreen, ScreenTransition.None);
+        Size: =21
+        Text: ="こちら"
+        Width: =491
+        X: =149
+        Y: =942
+        ZIndex: =7
 
