--- a/Src/HomeScreen.fx.yaml
+++ b/Src/HomeScreen.fx.yaml
@@ -1,6 +1,6 @@
 HomeScreen As screen:
     Fill: =RGBA(240,239,228,1)
-    OnVisible: |
+    OnVisible: |-
         =ClearCollect(
             temp,
             ShowColumns(
@@ -14,15 +14,31 @@ HomeScreen As screen:
         Set(
             HomeScreenresult,
             AzureOpenAIServiceConector.Run(
-                "これはあるサービスの全員のタスクのJSONファイルです。現在貴方はUSERIDが"&Text(user_id)&"の人のコメンテーターでそのUSERIDのユーザー名は"&user_name&"です。ユーザー名は"&user_name&"FLAGが1のときはそのタスクが終了していることを表し、反対に0のときは終わっていないことを表します。DATEは期限を表し、FINISHDATEは実際に終了した日付を表します。この人に適切なアドバイスをを100字程度で具体的に生成してください。",
+                "これはあるサービスの全員のタスクのJSONファイルです。現在貴方はUSERIDが" & Text(user_id) & "の人のコメンテーターでそのUSERIDのユーザー名は" & user_name & "です。ユーザー名は" & user_name & "FLAGが1のときはそのタスクが終了していることを表し、反対に0のときは終わっていないことを表します。DATEは期限を表し、FINISHDATEは実際に終了した日付を表します。この人に適切なアドバイスをを100字程度で具体的に生成してください。ただし、この人のタスクがJSONファイルに存在しないこともあります。その場合は、惑わされずに、タスクを追加することを促しましょう。",
                 JSON(temp)
             ).res
         );
+        Set(
+            HomeScreenPictureResult,
+            Dalle3Connector.Run(
+                Concatenate(
+                    "これはあるサービスの全員のタスクのJSONファイルです。現在貴方はUSERIDが",
+                    user_id,
+                    "の人のコメンテーターでそのUSERIDのユーザー名は",
+                    user_name,
+                    "です。ユーザー名は",
+                    user_name,
+                    "FLAGが1のときはそのタスクが終了していることを表し、反対に0のときは終わっていないことを表します。DATEは期限を表し、FINISHDATEは実際に終了した日付を表します。この人の進捗を表すのに適切な画像を山登りをコンセプトに生成してください。
+            ",
+                    JSON(temp)
+                )
+            ).res
+        )
 
     "HomeScreenGallery As gallery.'BrowseLayout_Vertical_ThreeTextVariant_ver5.0'":
         BorderColor: =RGBA(192,79,21,50)
         DelayItemLoading: =true
-        Height: =608
+        Height: =402
         Items: |-
             =Sort(
                 Filter(
@@ -43,7 +59,7 @@ HomeScreen As screen:
             Navigate(OneTaskShowScreen, ScreenTransition.None);
         TemplatePadding: =0
         TemplateSize: =116
-        Y: =458
+        Y: =635
         ZIndex: =1
 
         Title3 As label:
@@ -109,6 +125,7 @@ HomeScreen As screen:
             ZIndex: =4
 
         Separator3 As rectangle:
+            Fill: =RGBA(192,79,21,0.2)
             Height: =8
             OnSelect: =Select(Parent)
             Width: =Parent.TemplateWidth
@@ -131,8 +148,8 @@ HomeScreen As screen:
                 Navigate(ParentScreen, ScreenTransition.None),
                 Navigate(HomeScreen, ScreenTransition.None)
             );
-        X: =288
-        Y: =1072
+        X: =285
+        Y: =1049
         ZIndex: =2
 
     HomeScreenTaskIcon As icon.Note:
@@ -143,15 +160,31 @@ HomeScreen As screen:
                 Notify("保護者アカウントではこの機能は無効化されています。",NotificationType.Error),
                 Navigate(TaskScreen, ScreenTransition.None)
             );
-        X: =198
-        Y: =1072
+            Set(_task,CountRows(Gallery1.AllItems));
+            If(
+                _task = 0,
+                Set(_task, 1)
+            );
+            Set(
+                _Task,
+                CountRows(
+                    Filter(
+                        B_TASK,
+                        USERID = user_id,
+                        DATE = Today()
+                    )
+                )
+            );
+            Set(_tasks,LookUp(B_TROPHY,USERID = Text(user_id)).TASK);
+        X: =195
+        Y: =1049
         ZIndex: =3
 
     HomeScreenSettingsIcon As icon.Settings:
         Icon: =Icon.Settings
         OnSelect: =Navigate(SettingScreen, ScreenTransition.None);
-        X: =480
-        Y: =1072
+        X: =465
+        Y: =1049
         ZIndex: =4
 
     HomeScreenMailIcon As icon.Mail:
@@ -176,8 +209,8 @@ HomeScreen As screen:
                     ScreenTransition.None
                 )
             );
-        X: =111
-        Y: =1072
+        X: =105
+        Y: =1049
         ZIndex: =5
 
     HomeScreenLogoutIcon As icon.Lock:
@@ -190,7 +223,7 @@ HomeScreen As screen:
             Navigate(LoginScreen, ScreenTransition.None);
             Reset(LoginScreenPasswordTextField)
         X: =15
-        Y: =1072
+        Y: =1049
         ZIndex: =6
 
     HomeScreenRefreshIcon As icon.Reset:
@@ -201,8 +234,8 @@ HomeScreen As screen:
             Refresh(B_TASK);
             Refresh(B_TROPHY);
             Refresh(B_USER);
-        X: =559
-        Y: =1072
+        X: =555
+        Y: =1049
         ZIndex: =7
 
     HomeScreenProgressIcon As icon.Trending:
@@ -231,8 +264,8 @@ HomeScreen As screen:
                     {RANK: 0}
                 )
             );
-        X: =384
-        Y: =1072
+        X: =375
+        Y: =1049
         ZIndex: =8
 
     HomeScreenLabel1 As label:
@@ -241,7 +274,7 @@ HomeScreen As screen:
         Text: ="今日の未完了タスク"
         Width: =327
         X: =156
-        Y: =372
+        Y: =527
         ZIndex: =9
 
     HomeScreenLabel2 As label:
@@ -252,11 +285,29 @@ HomeScreen As screen:
         ZIndex: =10
 
     HomeScreenAIComment As label:
-        Height: =293
+        Height: =188
         Overflow: =Overflow.Scroll
         Size: =21
         Text: =HomeScreenresult
         Width: =640
         Y: =52
         ZIndex: =11
+
+    Image3 As image:
+        Height: =200
+        Image: =HomeScreenPictureResult
+        Width: =245
+        X: =197
+        Y: =310
+        ZIndex: =12
+
+    Label10 As label:
+        Align: =Align.Center
+        Height: =70
+        Size: =21
+        Text: ="現在のタスクの進み具合"
+        Width: =560
+        X: =37
+        Y: =240
+        ZIndex: =13
 
