--- a/Src/ParentScreen.fx.yaml
+++ b/Src/ParentScreen.fx.yaml
@@ -80,8 +80,8 @@ ParentScreen As screen:
                 Navigate(ParentScreen, ScreenTransition.None),
                 Navigate(HomeScreen, ScreenTransition.None)
             );
-        X: =288
-        Y: =1066
+        X: =285
+        Y: =1049
         ZIndex: =3
 
     HomeScreenTaskIcon_2 As icon.Note:
@@ -92,28 +92,32 @@ ParentScreen As screen:
                 Notify("保護者アカウントではこの機能は無効化されています。",NotificationType.Error),
                 Navigate(TaskScreen, ScreenTransition.None)
             );
-        X: =198
-        Y: =1072
+            Set(_task,CountRows(Gallery1.AllItems));
+            If(
+                _task = 0,
+                Set(_task, 1)
+            );
+            Set(
+                _Task,
+                CountRows(
+                    Filter(
+                        B_TASK,
+                        USERID = user_id,
+                        DATE = Today()
+                    )
+                )
+            );
+            Set(_tasks,LookUp(B_TROPHY,USERID = Text(user_id)).TASK);
+        X: =195
+        Y: =1049
         ZIndex: =4
 
     HomeScreenSettingsIcon_2 As icon.Settings:
         Icon: =Icon.Settings
         OnSelect: =Navigate(SettingScreen, ScreenTransition.None);
-        X: =476
-        Y: =1072
+        X: =465
+        Y: =1049
         ZIndex: =5
-
-    HomeScreenProgressIcon_2 As icon.Trending:
-        Icon: =Icon.Trending
-        OnSelect: |-
-            =If(
-                is_parent,
-                Notify("保護者アカウントではこの機能は無効化されています。",NotificationType.Error),
-                Navigate(RatingScreen, ScreenTransition.None)
-            );
-        X: =376
-        Y: =1072
-        ZIndex: =6
 
     HomeScreenMailIcon_2 As icon.Mail:
         Icon: =Icon.Mail
@@ -137,9 +141,9 @@ ParentScreen As screen:
                     ScreenTransition.None
                 )
             );
-        X: =101
-        Y: =1072
-        ZIndex: =7
+        X: =105
+        Y: =1049
+        ZIndex: =6
 
     HomeScreenLogoutIcon_2 As icon.Lock:
         Icon: =Icon.Lock
@@ -149,11 +153,12 @@ ParentScreen As screen:
                 Blank()
             );
             Navigate(LoginScreen, ScreenTransition.None);
-        X: =10
-        Y: =1072
-        ZIndex: =8
+            Reset(LoginScreenPasswordTextField)
+        X: =15
+        Y: =1049
+        ZIndex: =7
 
-    Icon4_1 As icon.Reset:
+    HomeScreenRefreshIcon_3 As icon.Reset:
         Icon: =Icon.Reset
         OnSelect: |-
             =Refresh(B_CHAT);
@@ -161,7 +166,37 @@ ParentScreen As screen:
             Refresh(B_TASK);
             Refresh(B_TROPHY);
             Refresh(B_USER);
-        X: =560
-        Y: =1072
+        X: =555
+        Y: =1049
+        ZIndex: =8
+
+    HomeScreenProgressIcon_2 As icon.Trending:
+        Icon: =Icon.Trending
+        OnSelect: |
+            =Navigate(
+                RatingScreen,
+                ScreenTransition.None
+            );
+            If(
+                LookUp(
+                    B_TROPHY,
+                    USERID = Text(user_id),
+                    IsBlank(RANK)
+                ),
+                Notify(
+                    "称号-登山開始",
+                    NotificationType.Success
+                );
+                Patch(
+                    B_TROPHY,
+                    LookUp(
+                        B_TROPHY,
+                        USERID = Text(user_id)
+                    ),
+                    {RANK: 0}
+                )
+            );
+        X: =375
+        Y: =1049
         ZIndex: =9
 
